Deixando semantico a tela

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
             <a href="pagstudent.html" target="_blank" rel="next">
                 <button class="Btestudante">
                     <i class="fa-solid fa-graduation-cap"></i>
-                    Estudante
+                    <p>Estudante</p>
                 </button>
             </a>
 
             <a href="pagdriver.html" target="_blank" rel="next">
                 <button class="Btmotorista">
                     <i class="fa-solid fa-bus"></i>
-                    Motorista
+                    <p>Motorista</p>
                 </button>
             </a>
         </div>
