Separei os arquivos CSS e HTML em pasta

--- a/1-index.html
+++ b/1-index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Assistente de Horarios de Onibus</title>
 
-        <link rel="stylesheet" href="style.css" type="text/css">
+        <link rel="stylesheet" href="css/1-style.css" type="text/css">
 
         <link rel="shortcut icon" href="icons/" type="image/x-icon">
 
@@ -12,14 +12,14 @@
     <body>
         <div class="container">
 
-            <a href="pagstudent.html" target="_blank" rel="next">
+            <a href="html/2-pagstudent.html" target="_blank" rel="next">
                 <button class="Btestudante">
                     <i class="fa-solid fa-graduation-cap"></i>
                     <p>Estudante</p>
                 </button>
             </a>
 
-            <a href="pagdriver.html" target="_blank" rel="next">
+            <a href="html/3-pagdriver.html" target="_blank" rel="next">
                 <button class="Btmotorista">
                     <i class="fa-solid fa-bus"></i>
                     <p>Motorista</p>
