--- a/html/2-pagstudent.html
+++ b/html/2-pagstudent.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página estudante</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="css/2-student.css" type="text/css">
     <link rel="shortcut icon" href="icons/" type="image/x-icon">
 </head>
 
