--- a/html/3-pagdriver.html
+++ b/html/3-pagdriver.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Motorista</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="css/3-driver.css" type="text/css">
     <link rel="shortcut icon" href="icons/" type="image/x-icon">
 </head>
 <body class="bodydriver">
